# sol

./: .gitignore  CHANGELOG.md  CHANGES.txt  DESIGN.md  GUIDE.md  LICENSE  NEW_FEATURES.md  README.md  REDESIGN.md  REFACTOR.txt  REGISTRY.md  build.sh  generate_api_docs.py  interpret.py  main.py  main_original.py  main_refactored.py  package.yaml  parsing.py  pyproject.toml  run_tests.py  sol  sol.cabal  stack.yaml  stdlib.py  stdlib.py.old  test_combined.py  test_design_example.py  test_new_features.py  test_performance.py  test_pipeline_debug.py  test_readline.py  test_repl.py
app/: Main.hs
docs/: README.md  build_docset.py  generate_docset.py  package_docset.py
example_dir/: test.txt
examples/: arrays.sol  build-rvasm.sh  build-rvasm.sol  cmd_demo.sol  comprehensive.sol  count-s.sol  csv-ops.sol  deploy-verilog.sh  deploy-verilog.sol  download_example.sol  enhanced_features_demo.sol  filesystem_example.sol  my.sh  new_features_demo.sol  raw_strings.sol  relative.sol  release_helper.sol  result_option_demo.sol  sigils_demo.sol  simple.sol  simple4.sol  sol.semantics  sol.v2  sol_1_0_features.sol  solv2.txt  system_showcase.sol  test_arrays.sol  test_functions.sol  test_progress.sol  test_raw_strings.sol  web.sol  web_example.sol
haskell-sol/: haskell-sol.cabal  package.yaml  stack.yaml
src/: Lib.hs
stdlib/: __init__.py  conversion.py  data.py  filesystem.py  git.py  hashing.py  network.py  operators.py  result.py  system.py
test/: Spec.hs
tests/: README.md  __init__.py  test_combined.py  test_comprehensive_features.py  test_design_example.py  (+10 more)
(+12 files in other folders)
