[project]
name = "sol"
version = "0.1.0"
description = "Sol Scripting Language"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gitpython>=3.1.44",
    "nuitka>=2.7.12",
    "psutil>=7.0.0",
    "pygments>=2.19.2",
    "pyinstaller>=6.14.2",
    "pyparsing>=3.2.3",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tomli>=2.2.1",
]

[tool.autopep8]
indent_size = 2
